# smashed

./: .dmypy.json  .flake8  .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
examples/: qasper.py  skimming.ipynb  squad.py  zero_shot_prompting.py
resources/: smashed.sketch
scripts/: blingfire-osx-arm64.sh  lint.sh  push-to-pypi.sh
smashed/: utils.py
smashed/base/: __init__.py  dataset.py  interface.py  mapper.py  pipeline.py  types.py
smashed/interfaces/: huggingface.py  simple.py  torchdata.py
smashed/mappers/: batchers.py  collators.py  converters.py  fields.py  io.py  multiseq.py  shape.py  tokenize.py
smashed/mappers/contrib/: sse.py
src/smashed/: EDITABLE  __init__.py  utils.py
src/smashed/base/: __init__.py  abstract.py  cache.py  interfaces.py  mappers.py  pipeline.py  recipes.py  types.py  views.py
src/smashed/base/mappers/: __init__.py  abstract.py  base.py  interfaces.py
src/smashed/contrib/: squad.py  sse.py
src/smashed/interfaces/: huggingface.py  simple.py
src/smashed/mappers/: __init__.py  batchers.py  cache.py  collators.py  contrib.py  converters.py  debug.py  decoding.py  fields.py  filters.py  glom.py  loaders.py  masks.py  multiseq.py  nested.py  prompting.py  promptsource.py  shape.py  text.py  tokenize.py  types.py
src/smashed/mappers/contrib/: squad.py  sse.py
src/smashed/recipes/: __init__.py  collators.py  prompting.py  promptsource.py
src/smashed/utils/: __init__.py  caching.py  compression.py  convert.py  decompression.py  glom.py  install_blingfire_macos.py  io_utils.py  nested.py  shape_utils.py  version.py  wordsplitter.py
src/smashed/utils/io_utils/: __init__.py  closures.py  compression.py  io_wrappers.py  multipath.py  operations.py
tests/: __init__.py  test_batch_interface.py  test_batchers.py  test_cache.py  test_caching.py  test_collators.py  test_decoding.py  test_decompression.py  test_drop_fields.py  test_filters.py  test_ftfy.py  test_glom.py  test_hf_pickling.py  test_interface_selector.py  test_io_utils.py  test_loaders.py  test_masks.py  test_multiseq.py  test_pipeline.py  test_print.py  test_prompting.py  test_promptsource.py  test_promptsource_recipe.py  test_s3.py  test_shape_mappers.py  test_shape_utils.py  test_text.py  test_text2words.py  test_tokenize_mappers.py  test_types.py  test_unpacking_mapper.py  test_utils_nested.py
tests/fixtures/TrecQA/: TrecQA.py
