[project]
name = "smashed"
version = "0.13.0"
description = "Sequential MAppers for Sequences of HEterogeneous Dictionaries is a set of Python interfaces designed to apply transformations to samples in datasets, which are often implemented as sequences of dictionaries."
authors = [
    {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org" },
    {name = "Luca Soldaini", email = "luca@soldaini.net"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9",
    "transformers>=4.5",
    "necessary>=0.3.1",
    "trouting>=0.2.2",
    "ftfy>=6.1.1",
    "platformdirs>=2.5.0",
    "glom>=21.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "mappers",
    "pytorch",
    "torch",
    "huggingfae",
    "transformers",
    "datasets",
    "dict",
    "datset",
    "pipeline",
    "preprocessing",
    "nlp",
    "natural language processing",
    "text",
    "prompting"
]



[project.urls]
"Homepage" = "https://github.com/allenai/smashed"
"Repository" = "https://github.com/allenai/smashed"
"Bug Tracker" = "https://github.com/allenai/smashed/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
smashed = ["py.typed", "../requirements.txt"]


[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0.0",
    "pip >= 21.0.0",
    "wheel"
]

[project.optional-dependencies]
dev = [
    "springs>=1.8.3",
    "black[jupyter]>=21.12b0",
    "isort>=5.8.0",
    "mypy>=0.971",
    "pytest>=5.2",
    "ipython>=8.4.0",
    "autopep8>=1.7.0",
    "flake8>=5.0",
    "ipdb>=0.13.0",
    "flake8-pyi>=22.8.1",
    "Flake8-pyproject>=1.1.0",
]
remote = [
    "smart-open>=5.2.1"
]
datasets = [
  "datasets>=2.4.0",
  "dill>=0.3.0",
]
prompting = [
    "promptsource>=0.2.3",
    "blingfire>=0.1.8",
    "PyYAML>=6.0.0",
]
torchdata = [
  "torch>=1.12.1",
  "torchdata>=0.4.1"
]
all = [
    "smashed[dev]",
    "smashed[datasets]",
    "smashed[torchdata]",
    "smashed[remote]",
    "smashed[prompting]",
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
aggressive = 3

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_site_packages = true
allow_redefinition = false

[tool.mypy-tests]
strict_optional = false

[tool.flake8]
exclude = [
    ".venv/",
    "tmp/"
]
per-file-ignores = [
    '*.py:E203',
    '__init__.py:F401',
    '*.pyi:E302,E305'
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_classes = ["Test*", "*Test"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
markers = []
filterwarnings = []
