[project]
name = "smashed"
version = "0.21.5"
description = """\
SMASHED is a toolkit designed to apply transformations to samples in \
datasets, such as fields extraction, tokenization, prompting, batching, \
and more. Supports datasets from Huggingface, torchdata iterables, or \
simple lists of dictionaries.\
"""
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "necessary>=0.4.3",
    "trouting>=0.3.3",
    "ftfy>=6.1.1",
    "platformdirs>=2.5.0",
    "glom>=21.0.0",
    "Jinja2>=3.0.3",
    "numpy>=1.19.5"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "mappers",
    "pytorch",
    "torch",
    "huggingface",
    "transformers",
    "datasets",
    "dict",
    "pipeline",
    "preprocessing",
    "nlp",
    "natural language processing",
    "text",
    "prompting",
    "prefix tuning",
    "in context learning"
]

[[project.authors]]
name = "Allen Institute for Artificial Intelligence"
email = "contact@allenai.org"

[[project.authors]]
name = "Luca Soldaini"
email = "luca@soldaini.net"

[[project.authors]]
name = "Kyle Lo"
email = "kylel@allenai.org"

[[project.maintainers]]
name = "Luca Soldaini"
email = "luca@soldaini.net"

[project.urls]
"Homepage" = "https://github.com/allenai/smashed"
"Repository" = "https://github.com/allenai/smashed"
"Bug Tracker" = "https://github.com/allenai/smashed/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
smashed = ["py.typed", "../requirements.txt"]


[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0.0",
    "pip >= 21.0.0",
    "wheel"
]

[project.optional-dependencies]
dev = [
    "black[jupyter]>=21.12b0",
    "isort>=5.8.0",
    "mypy>=0.971",
    "pytest>=5.2",
    "ipython>=8.4.0",
    "autopep8>=1.7.0",
    "flake8>=5.0",
    "ipdb>=0.13.0",
    "flake8-pyi>=22.8.1",
    "Flake8-pyproject>=1.1.0",
    "moto[ec2,s3,all] >= 4.0.0",
]
remote = [
    "smart-open>=5.2.1",
    "boto3>=1.25.5",
]
torch = [
    "torch>=1.9",
]
datasets = [
    "smashed[torch]",
    "transformers>=4.5",
    "datasets>=2.8.0",
    "dill>=0.3.0",
]
prompting = [
    "smashed[torch]",
    "transformers>=4.5",
    "promptsource>=0.2.3",
    "blingfire>=0.1.8",
]
torchdata = [
  "torch>=1.13.1",
  "torchdata>=0.5.1"
]
all = [
    "smashed[dev]",
    "smashed[torch]",
    "smashed[datasets]",
    "smashed[torchdata]",
    "smashed[remote]",
    "smashed[prompting]",
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
aggressive = 3

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_site_packages = true
allow_redefinition = false

[tool.mypy-tests]
strict_optional = false

[tool.flake8]
exclude = [
    ".venv/",
    "tmp/"
]
per-file-ignores = [
    '*.py:E203',
    '__init__.py:F401',
    '*.pyi:E302,E305'
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_classes = ["Test*", "*Test"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
markers = []
filterwarnings = []
