[metadata]
name = smashed
version = 0.1.3
author = Allen Institute for Artificial Intelligence
author_email = contact@allenai.org
description = Sequential MAppers for Sequences of HEterogeneous Dictionaries
    is a set of Python interfaces designed to apply transformations to samples
    in datasets, which are often implemented as sequences of dictionaries.

long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenai/smashed
project_urls =
    Bug Tracker = https://github.com/allenai/smashed/issues
license = Apache
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.8
install_requires =
    torch >= 1.9
    transformers >= 4.5


[options.extras_require]
dev =
    # Checks style, syntax, and other useful errors.
    flake8

    # Static type checking
    mypy>=0.941

    # Automatic code formatting
    black>=22.1.0
    isort>=5.10.1

    # Running tests
    pytest

    # Flaky tests
    flaky

    # Cache downloads while running tests
    cached-path>=1.1.5


[options.packages.find]
where = .
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    scripts
